WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111205
DFG CSE phase shouldn't rely on ref count of nodes, since it doesn't have to
https://bugs.webkit.org/show_bug.cgi?id=111205
Summary
DFG CSE phase shouldn't rely on ref count of nodes, since it doesn't have to
Filip Pizlo
Reported
2013-03-01 12:06:32 PST
Patch forthcoming.
Attachments
the patch
(2.71 KB, patch)
2013-03-01 12:09 PST
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-03-01 12:09:58 PST
Created
attachment 191005
[details]
the patch
Filip Pizlo
Comment 2
2013-03-01 12:42:12 PST
Landed in
http://trac.webkit.org/changeset/144481
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug